corrected password type

--- a/welcome.html
+++ b/welcome.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Mini Assignment 6</title>
+        <title>Mini Assignment 7</title>
     </head>
     <body>
-        <form action="register.php" method="POST">
+        <form action="./register.php" method="POST">
             Please enter the following details:<br/><br/>
             username: <input type="text" name="user_name"><br/>
-            password: <input type="hidden" name="password"><br/><br/>
+            password: <input type="password" name="pwd"><br/><br/>
             <input type="submit" value="Register">
         </form>
     </body>
